Analysts page - fixed spacing issues

--- a/themes/openstack/css/analysts.css
+++ b/themes/openstack/css/analysts.css
@@ -7,14 +7,17 @@
     color: white;
     margin: 0; }
   .analysts-hero .carousel {
-    height: 350px; }
+    height: auto; }
     .analysts-hero .carousel .carousel-inner {
-      height: 350px; }
+      height: auto; }
       .analysts-hero .carousel .carousel-inner .carousel-caption {
         top: 10px;
         right: 10%;
         left: 10%;
-        font-size: 22px; }
+        font-size: 22px; 
+        position: relative;
+        width: 80%;
+        }
         .analysts-hero .carousel .carousel-inner .carousel-caption .attribute {
           font-size: 14px;
           font-weight: 300;
@@ -37,20 +40,20 @@
           content: close-quote;
           right: -40px; }
       .analysts-hero .carousel .carousel-inner .item {
-        height: 350px;
+        height: auto;
         background: transparent; }
 
 @media (max-width: 767px) {
   .analysts-hero .carousel {
-    height: 300px; }
+    height: auto; }
     .analysts-hero .carousel .carousel-inner {
-      height: 300px; }
+      height: auto; }
       .analysts-hero .carousel .carousel-inner .carousel-caption {
         font-size: 18px;
         right: 5%;
         left: 5%; }
       .analysts-hero .carousel .carousel-inner .item {
-        height: 300px; } 
+        height: auto; } 
         .analysts-hero .carousel .carousel-inner .carousel-caption:before {
           content: open-quote;
           left: -20px; }
@@ -61,15 +64,15 @@
 
 @media (max-width: 500px) {
   .analysts-hero .carousel {
-    height: 390px; }
+    height: auto; }
     .analysts-hero .carousel .carousel-inner {
-      height: 390px; }
+      height: auto; }
       .analysts-hero .carousel .carousel-inner .carousel-caption {
         font-size: 18px;
         right: 5%;
         left: 5%; }
       .analysts-hero .carousel .carousel-inner .item {
-        height: 390px; } 
+        height: auto; } 
         .analysts-hero .carousel .carousel-inner .carousel-caption:before {
           content: open-quote;
           left: -20px; }
